Updated logger